force-app/main/default/objects/Warranty__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <description>Related assests</description>
    <inlineHelpText
  >Limited Warranty covers for a year and Extended Warranty covers for 2 years.</inlineHelpText>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Warranties</relationshipLabel>
    <relationshipName>Warranties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>