force-app/main/default/objects/Warranty__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Two types of warranties offered</description>
    <inlineHelpText
  >Limited Warranty covers for a year and Extended Warranty covers for 2 years.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limited</fullName>
                <default>true</default>
                <label>Limited</label>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>