force-app/main/default/objects/Warranty__c/validationRules/Start_and_End_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_and_End_Dates</fullName>
    <active>true</active>
    <errorConditionFormula
  >Start_Date__c &gt;= End_Date__c</errorConditionFormula>
    <errorMessage>Start and end dates cannot be the same</errorMessage>
</ValidationRule>